build/log/idf_py_stdout_output_32289
[1/13] Building C object esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj
[2/13] Linking C static library esp-idf/utils/libutils.a
[3/13] Performing build step for 'bootloader'
[1/1] cd /home/luisma/Escritorio/SBC/weather-compass/build/bootloader/esp-idf/esptool_py && /home/luisma/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/luisma/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/luisma/Escritorio/SBC/weather-compass/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[4/11] Building C object esp-idf/adc/CMakeFiles/__idf_adc.dir/adc.c.obj
FAILED: esp-idf/adc/CMakeFiles/__idf_adc.dir/adc.c.obj 
/home/luisma/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-892-g692c1fcc52\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/luisma/Escritorio/SBC/weather-compass/build/config -I/home/luisma/Escritorio/SBC/weather-compass/components/adc -I/home/luisma/esp/esp-idf/components/newlib/platform_include -I/home/luisma/esp/esp-idf/components/freertos/config/include -I/home/luisma/esp/esp-idf/components/freertos/config/include/freertos -I/home/luisma/esp/esp-idf/components/freertos/config/xtensa/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/luisma/esp/esp-idf/components/freertos/esp_additions/include -I/home/luisma/esp/esp-idf/components/esp_hw_support/include -I/home/luisma/esp/esp-idf/components/esp_hw_support/include/soc -I/home/luisma/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/luisma/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/luisma/esp/esp-idf/components/heap/include -I/home/luisma/esp/esp-idf/components/log/include -I/home/luisma/esp/esp-idf/components/soc/include -I/home/luisma/esp/esp-idf/components/soc/esp32 -I/home/luisma/esp/esp-idf/components/soc/esp32/include -I/home/luisma/esp/esp-idf/components/hal/platform_port/include -I/home/luisma/esp/esp-idf/components/hal/esp32/include -I/home/luisma/esp/esp-idf/components/hal/include -I/home/luisma/esp/esp-idf/components/esp_rom/include -I/home/luisma/esp/esp-idf/components/esp_rom/include/esp32 -I/home/luisma/esp/esp-idf/components/esp_rom/esp32 -I/home/luisma/esp/esp-idf/components/esp_common/include -I/home/luisma/esp/esp-idf/components/esp_system/include -I/home/luisma/esp/esp-idf/components/esp_system/port/soc -I/home/luisma/esp/esp-idf/components/esp_system/port/include/private -I/home/luisma/esp/esp-idf/components/xtensa/esp32/include -I/home/luisma/esp/esp-idf/components/xtensa/include -I/home/luisma/esp/esp-idf/components/xtensa/deprecated_include -I/home/luisma/esp/esp-idf/components/lwip/include -I/home/luisma/esp/esp-idf/components/lwip/include/apps -I/home/luisma/esp/esp-idf/components/lwip/include/apps/sntp -I/home/luisma/esp/esp-idf/components/lwip/lwip/src/include -I/home/luisma/esp/esp-idf/components/lwip/port/include -I/home/luisma/esp/esp-idf/components/lwip/port/freertos/include -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/luisma/esp/esp-idf/components/esp_adc/include -I/home/luisma/esp/esp-idf/components/esp_adc/interface -I/home/luisma/esp/esp-idf/components/esp_adc/esp32/include -I/home/luisma/esp/esp-idf/components/esp_adc/deprecated/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/luisma/Escritorio/SBC/weather-compass=. -fmacro-prefix-map=/home/luisma/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/adc/CMakeFiles/__idf_adc.dir/adc.c.obj -MF esp-idf/adc/CMakeFiles/__idf_adc.dir/adc.c.obj.d -o esp-idf/adc/CMakeFiles/__idf_adc.dir/adc.c.obj -c /home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c: In function 'adc_read_value':
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:31:9: error: 'do_calibration1_chan0' undeclared (first use in this function); did you mean 'do_calibration1_chan3'?
   31 |     if (do_calibration1_chan0) {
      |         ^~~~~~~~~~~~~~~~~~~~~
      |         do_calibration1_chan3
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:31:9: note: each undeclared identifier is reported only once for each function it appears in
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:32:33: error: 'adc1_cali_chan0_handle' undeclared (first use in this function); did you mean 'adc1_cali_chan3_handle'?
   32 |         adc_cali_raw_to_voltage(adc1_cali_chan0_handle, adc_raw[0][0], &voltage[0][0]);
      |                                 ^~~~~~~~~~~~~~~~~~~~~~
      |                                 adc1_cali_chan3_handle
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c: In function 'adc_init':
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:45:9: warning: 'ADC_ATTEN_DB_11' is deprecated [-Wdeprecated-declarations]
   45 |         .atten = ADC_ATTEN,
      |         ^
In file included from /home/luisma/esp/esp-idf/components/esp_adc/include/esp_adc/adc_oneshot.h:12,
                 from /home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:10:
/home/luisma/esp/esp-idf/components/hal/include/hal/adc_types.h:51:5: note: declared here
   51 |     ADC_ATTEN_DB_11 __attribute__((deprecated)) = ADC_ATTEN_DB_12,  ///<This is deprecated, it behaves the same as `ADC_ATTEN_DB_12`
      |     ^~~~~~~~~~~~~~~
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:48:5: warning: 'ADC_ATTEN_DB_11' is deprecated [-Wdeprecated-declarations]
   48 |     do_calibration1_chan1 = example_adc_calibration_init(ADC_UNIT_1, ADC1_CHAN6, ADC_ATTEN, &adc1_cali_chan1_handle);
      |     ^~~~~~~~~~~~~~~~~~~~~
/home/luisma/esp/esp-idf/components/hal/include/hal/adc_types.h:51:5: note: declared here
   51 |     ADC_ATTEN_DB_11 __attribute__((deprecated)) = ADC_ATTEN_DB_12,  ///<This is deprecated, it behaves the same as `ADC_ATTEN_DB_12`
      |     ^~~~~~~~~~~~~~~
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:51:5: warning: 'ADC_ATTEN_DB_11' is deprecated [-Wdeprecated-declarations]
   51 |     do_calibration1_chan2 = example_adc_calibration_init(ADC_UNIT_1, ADC1_CHAN4, ADC_ATTEN, &adc1_cali_chan2_handle);
      |     ^~~~~~~~~~~~~~~~~~~~~
/home/luisma/esp/esp-idf/components/hal/include/hal/adc_types.h:51:5: note: declared here
   51 |     ADC_ATTEN_DB_11 __attribute__((deprecated)) = ADC_ATTEN_DB_12,  ///<This is deprecated, it behaves the same as `ADC_ATTEN_DB_12`
      |     ^~~~~~~~~~~~~~~
/home/luisma/Escritorio/SBC/weather-compass/components/adc/adc.c:54:5: warning: 'ADC_ATTEN_DB_11' is deprecated [-Wdeprecated-declarations]
   54 |     do_calibration1_chan3 = example_adc_calibration_init(ADC_UNIT_1, ADC1_CHAN5, ADC_ATTEN, &adc1_cali_chan3_handle);
      |     ^~~~~~~~~~~~~~~~~~~~~
/home/luisma/esp/esp-idf/components/hal/include/hal/adc_types.h:51:5: note: declared here
   51 |     ADC_ATTEN_DB_11 __attribute__((deprecated)) = ADC_ATTEN_DB_12,  ///<This is deprecated, it behaves the same as `ADC_ATTEN_DB_12`
      |     ^~~~~~~~~~~~~~~
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
/home/luisma/Escritorio/SBC/weather-compass/main/main.c: In function 'app_main':
/home/luisma/Escritorio/SBC/weather-compass/main/main.c:26:9: warning: variable 'agua_voltage' set but not used [-Wunused-but-set-variable]
   26 |     int agua_voltage = 0;
      |         ^~~~~~~~~~~~
/home/luisma/Escritorio/SBC/weather-compass/main/main.c:23:9: warning: variable 'lumenes_value' set but not used [-Wunused-but-set-variable]
   23 |     int lumenes_value = 0;
      |         ^~~~~~~~~~~~~
/home/luisma/Escritorio/SBC/weather-compass/main/main.c:22:9: warning: variable 'temperature_voltage' set but not used [-Wunused-but-set-variable]
   22 |     int temperature_voltage = 0;
      |         ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
